# Project

./: CMakeLists.txt  Dockerfile  Makefile  README.md  data.pot  dconfig  eccoci.sh  functions.cpp  functions.hpp  main  main.cpp  make.dep  matrix.cpp  matrix.hpp  muparser_fun.cpp  muparser_fun.hpp  output.cpp  output.csv  output.sh  output2.sh  parameters.cpp  parameters.hpp  pressure.csv  pressure.sh  run.sh  system_new.cpp  systems.cpp  systems.hpp  transport.csv  velocity.csv  velocity.sh
2reagents/: CMakeLists.txt  Makefile  data.pot  fixed_space.gnuplot  fixed_space_CaSiO3.gnuplot  fixed_time_CaSiO3.gnuplot  output.cpp  output.hpp  systems.cpp
6reagents/: CMakeLists.txt  concentrations.cpp  concentrations.hpp  data.pot  main.cpp
Darcy_con_sparse/: data.pot  error.csv  error.sh  exact_velocity.csv  exe.sh  main  main.cpp  matrix.cpp  matrix.hpp  output.cpp  output.hpp  parameters.cpp  pressure.gnuplot  pressure.sh  pressure10.csv  pressure160.csv  pressure20.csv  pressure40.csv  pressure80.csv  systems.cpp  systems.hpp  velocity.gnuplot  velocity.sh  velocity10.csv  velocity160.csv  velocity20.csv  velocity40.csv  velocity80.csv
Darcy_different_permeability/: data.pot  main  main.cpp  matrix.cpp  matrix.hpp  output.cpp  output.hpp  parameters.hpp  pressure100.csv  systems.cpp  velocity.gnuplot  velocity100.csv
case0_example/: CMakeLists.txt  README.md
case1_darcy/: CMakeLists.txt  README.md
case2_darcy/: CMakeLists.txt  README.md
case3_transport/: CMakeLists.txt  README.md
case4_linear_decay/: CMakeLists.txt  README.md
case4_linear_decay/src/: Ca_fixed_space.csv  Ca_fixed_time.csv  Makefile  data.pot  exe.sh  fixed_time.gnuplot  main  main.cpp  systems.cpp
case5_2reagents/: CMakeLists.txt  README.md
case6_all/: CMakeLists.txt  README.md  data.pot
convergence/: data.pot  main  main.cpp  output.cpp  output.hpp  parameters.cpp  pressure.csv  pressure.sh  systems.cpp  systems.hpp  velocity.csv  velocity.sh
src/: main  (+27 more)
test/: CMakeLists.txt  Darcy_system.cpp  F_meno_piu_test_main.cpp  README.md  explicit.cpp  gradino.cpp  implicit_transport.cpp  main.cpp  main_matrix_F.cpp  main_test_C.cpp  notedarcyconv  output.cpp  output.hpp  prove_eigen.cpp  systems.cpp  systems_before_reaction.cpp  systems_decay.cpp  systems_decay.hpp  transportnoplot.cpp
test/6reagents/: CO2.gnuplot  Ca.gnuplot  CaSiO3.gnuplot  HCO3_meno.gnuplot  H_piu.gnuplot  SiO2.gnuplot  concentrations.cpp  concentrations.hpp  data.pot  main.cpp
test/6reagents/origin/: concentrations.cpp.orig
test/Prima dei 6 reagenti/: functions.cpp
test/convergence_Darcy/: error.sh  file_pressure.sh  file_vel.sh  matrix.cpp  muparser_fun.cpp  output.cpp  parameters.hpp  pressure.sh  systems.cpp
test/convergenza_tempo/: .Makefile.swp  CMakeLists.txt  README.md  functions.cpp
test/convergenza_tempo/include/: function.hpp
test/convergenza_tempo/src/: Makefile  function.cpp  main.cpp
test/decadimento_lineare/: Ca_fixed_space.csv  Ca_fixed_time.csv  data.pot  fixed_space.gnuplot  main  main.cpp  parameters.hpp  systems.hpp
test/mains_darcy/: main(semplice Darcy).cpp
test/old6reagents/src/: CO2_time.gnuplot  CaSiO3.gnuplot  CaSiO3_time.gnuplot  Ca_time.gnuplot  HCO3_meno_time.gnuplot  H_piu_time.gnuplot  SiO2_time.gnuplot  concentrations.cpp  concentrations.hpp  data.pot  example.gnuplot  fixed_time.sh  main.cpp
test/output/: all.csv  example.gnuplot  output_100_fixed_space_Ca.sh  output_100_fixed_space_CaSiO3.sh  output_100_fixed_time_Ca.sh  output_100_fixed_time_CaSiO3.sh  velocity.sh
test/output/past_output/: output_100_fixed_time_CaSiO3.sh  output_10_fixed_time.sh
test/prova/: CO2_fixed_space.csv  CaSiO3_fixed_space.csv  Ca_fixed_space.csv  Ca_fixed_time.csv  HCO3_fixed_space.csv  H_piu_fixed_space.csv  functions.cpp  functions.hpp  main  main.cpp  matrix.hpp  output.hpp  parameters.cpp
test/prova5reagentiAnna/: main  main.cpp  output.cpp  output.hpp
test/prova5reagentiAnna_modificato/: functions.cpp  functions.hpp  main.cpp  output.cpp
test/prova_tosta_trasp_reaction/: data.pot  functions.cpp  main  main.cpp  matrix.cpp  output.cpp  output.hpp  parameters.hpp
test/solo_trasporto/: data.pot  fixed_space.gnuplot  fixed_time.gnuplot  main.cpp  matrix.cpp  output.cpp  output.hpp  parameters.hpp  systems.cpp
test/src/: functions.hpp  main.cpp  output.cpp  output.hpp  parameters.cpp  systems.hpp
test/src_completo/: concentrations.cpp  concentrations.hpp  main.cpp  parameters.hpp
test/src_completo_sparse_Anna/: CaSiO3_fixed_space.csv  Ca_fixed_space.csv  Ca_fixed_time.csv  all.csv  concentrations.cpp  concentrations.hpp  data.pot  main  main.cpp  muparser_fun.hpp  parameters.cpp  parameters.hpp
test/src_prima_dei_6_reagenti/: data.pot  output.cpp  parameters.cpp  parameters.hpp  systems.cpp
test/trasporto/: main.cpp  matrix.cpp  systems.cpp  systems.hpp
test/trasporto_reazione_2_reagenti/: fixed_space.sh  main.cpp
(+584 files in other folders)
